src/test/ui/reachable/expr_struct.stderr
error: unreachable expression
  --> $DIR/expr_struct.rs:24:13
   |
LL |     let x = Foo { a: 22, b: 33, ..return }; //~ ERROR unreachable
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_struct.rs:14:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_struct.rs:29:33
   |
LL |     let x = Foo { a: return, b: 33, ..return }; //~ ERROR unreachable
   |                                 ^^

error: unreachable expression
  --> $DIR/expr_struct.rs:34:39
   |
LL |     let x = Foo { a: 22, b: return, ..return }; //~ ERROR unreachable
   |                                       ^^^^^^

error: unreachable expression
  --> $DIR/expr_struct.rs:39:13
   |
LL |     let x = Foo { a: 22, b: return }; //~ ERROR unreachable
   |             ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

